--- a/src/components/app/app.sass
+++ b/src/components/app/app.sass
@@ -12,6 +12,9 @@
 
 html, body
   height: 100%
+  width: 100%
+  position: fixed
+  overflow: hidden
 
 html
   font-size: 62.5%
@@ -26,6 +29,7 @@ html
   --colorTextDim: #8D8D8D
   --colorTextSecondary: #BCBCBC
   --colorTextError: #EC7272
+  --colorTextOK: #6DC150
   
   --sizePadding: 3rem
 
@@ -80,7 +84,7 @@ h6, .h6
 
 
 // ==========================================
-// media query helpers
+// media query targets / helpers
 .media-phone
   @media screen and (min-width: 480px)
     display: none !important
@@ -98,6 +102,56 @@ h6, .h6
 a
   text-decoration: none
   color: inherit
+  position: relative
+  z-index: 1
 
-  &:hover
-    text-decoration: underline
+  &::before
+    content: ''
+    position: absolute
+    top: 80%
+    left: -.4em
+    right: -.4em
+    height: .4em
+    border-radius: .2em
+    z-index: -1
+    transition: all .1s ease
+
+  &:active::before
+    background: var(--colorAccent)
+
+  @media screen and (hover: hover)
+    &:not(.logo):hover
+      color: var(--colorText)
+      
+      &::before
+        background: var(--colorAccent)
+
+form
+  height: 100%
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  
+  p
+    font-size: 1.2em
+    line-height: 1.2
+    margin: 1em 0 2em
+    width: 80%
+
+    &.disclaimer
+      font-size: .9em
+      color: var(--colorTextDim)
+      width: 80%
+      min-width: 16rem
+      margin: 0 auto 3em
+      display: flex
+      align-items: flex-end
+      justify-content: center
+      text-align: center
+      flex: 1
+
+  .fields
+    flex: 1
+
+  .btn
+    font-size: 1.2em
