--- a/src/routes/landing-page/landing-page.sass
+++ b/src/routes/landing-page/landing-page.sass
@@ -52,43 +52,9 @@
 
     @media screen and (min-width: 480px)
       display: none
-
-  nav
-    position: absolute
-    top: 0
-    left: 0
-    right: 0
-    z-index: 10
-    pointer-events: none
-
-    .wrapper
-      display: flex
-      justify-content: space-between
-      align-items: center
-      pointer-events: all
-      padding-top: 0
-      padding-bottom: 0
-      height: 8rem
-
-    .btn
-      font-size: .8em
-      background: var(--colorDim)
-      color: var(--colorText)
-      
-      i
-        margin-left: 0.3em
-    
-    a
-      text-decoration: none
-
-    .links
-      li
-        display: inline-block
-        margin-left: 2em
-        text-align: right
-
-      a
-        color: var(--colorTextDim)
+  
+  .btn.fill
+    width: calc(100% - (var(--sizePadding) * 2))
     
   .items
     height: 100%
@@ -148,11 +114,6 @@
         z-index: -1
     
   @media screen and (min-width: 480px)
-    nav
-      .links a
-        color: inherit
-        font-weight: bold
-
     .items
       width: 100%
 
