enhanced for desktop use

--- a/src/components/button/button.sass
+++ b/src/components/button/button.sass
@@ -5,6 +5,7 @@
   border: none
   outline: none
   border-radius: 2em
+  cursor: pointer
   background: var(--colorText)
   color: var(--colorBackground)
   padding: .8em
