--- a/src/components/nav/nav.sass
+++ b/src/components/nav/nav.sass
@@ -2,7 +2,7 @@ nav
   position: absolute
   top: 0
   left: 0
-  right: 0
+  width: 100%
   z-index: 10
   pointer-events: none
 
@@ -34,6 +34,3 @@ nav
       display: inline-block
       margin-left: 2em
       text-align: right
-
-      a
-        color: var(--colorTextDim)
