--- a/src/components/app/app.sass
+++ b/src/components/app/app.sass
@@ -23,7 +23,7 @@ html
   // variables for everyone
   --colorAccent: #FFD98E
   --colorHighlight1: #5584B4
-  --colorHighlight2: #8BB295
+  --colorHighlight2: #A76D99
   --colorBackground: #FFFFFF
   --colorPale: #F5F5F5
   --colorDim: #E9E9E9
@@ -77,46 +77,14 @@ h6, .h6
 .app
   height: 100%
 
+  & > section
+    transition: all .3s ease
+
 .wrapper
   width: 100%
   max-width: 1000px
   margin: 0 auto
   padding: var(--sizePadding)
-
-form
-  height: 100%
-  display: flex
-  flex-direction: column
-  justify-content: space-between
-  
-  p
-    font-size: 1.2em
-    line-height: 1.2
-    margin: 1em 0 2em
-    width: 80%
-
-    &.disclaimer
-      font-size: .9em
-      color: var(--colorTextDim)
-      width: 80%
-      min-width: 16rem
-      margin: 0 auto 3em
-      display: flex
-      justify-content: center
-      text-align: center
-      flex: 1
-
-  .fields
-    flex: 1
-
-  .btn
-    font-size: 1.2em
-
-$sHeight: 50%
-$sMinHeight: 40em
-$sWidth: 50%
-$sCorners: .5em
-$sShadow: 0 1em 3em rgba(#000, 0.2)
 
 .form-view
   height: 100%
@@ -127,57 +95,6 @@ $sShadow: 0 1em 3em rgba(#000, 0.2)
   @media screen and (min-width: 480px)
     padding-top: 0
     background-color: var(--colorPale)
-
-.form-content
-  height: 100%
-  width: 100%
-  max-width: 1000px
-  margin: 0 auto
-
-  @media screen and (min-width: 480px)
-    display: flex
-    align-items: center
-    justify-content: center
-    
-    form
-      margin: 0
-      width: $sWidth
-      height: $sHeight
-      min-height: $sMinHeight
-      background: var(--colorBackground)
-      padding: 3em
-      border-top-right-radius: $sCorners
-      border-bottom-right-radius: $sCorners
-      box-shadow: $sShadow
-    
-    .artwork
-      position: relative
-      width: $sWidth
-      height: $sHeight
-      min-height: $sMinHeight
-      background: var(--colorHighlight1)
-      border-top-left-radius: $sCorners
-      border-bottom-left-radius: $sCorners
-      display: flex
-      align-items: center
-      justify-content: center
-      z-index: 2
-      box-shadow: $sShadow
-
-      &.alt
-        background: var(--colorHighlight2)
-
-      img
-        height: 50%
-      
-    @media screen and (max-height: 500px)
-      align-items: flex-start
-
-      form
-        border-radius: 0
-        padding-top: 6em
-      .artwork
-        border-radius: 0
 
 
 // ==========================================
