optimized using inline SVGs

--- a/src/components/auth-form/auth-form.sass
+++ b/src/components/auth-form/auth-form.sass
@@ -83,7 +83,7 @@ $sShadow: 0 1em 3em rgba(#000, 0.2)
       &.alt
         background: var(--colorHighlight2)
 
-      img
+      svg
         height: 50%
       
     @media screen and (max-height: 500px)
