--- a/src/components/ob-item/ob-item.sass
+++ b/src/components/ob-item/ob-item.sass
@@ -14,6 +14,8 @@
     p
       font-size: 1.2em
       line-height: 1.4
+      width: 80%
+      margin: 0 auto
     
     @media screen and (min-width: 480px)
       padding-top: 0
@@ -23,13 +25,16 @@
         flex-direction: row
         align-items: center
 
-      img
-        max-width: 50vw
-        flex: 1
+      svg
+        height: initial
+        width: 50vw
+      
+      p
+        width: 100%
+        margin: 0
       
       .content
         text-align: left
-        flex: 2
       
       &:nth-of-type(2n + 1)
         .wrapper
