--- a/src/components/button/button.sass
+++ b/src/components/button/button.sass
@@ -38,5 +38,7 @@
     &:before
       display: none
   
-  i
-    font-size: inherit
+  svg
+    height: 1em
+    width: 1em
+    fill: currentColor
