--- a/src/components/app/app.sass
+++ b/src/components/app/app.sass
@@ -1,6 +1,5 @@
 // ==========================================
-// external
-// @import url('https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css')
+// external link for font files
 @import url('https://use.typekit.net/wny2zvq.css')
 
 
@@ -8,6 +7,7 @@
 // global
 *
   box-sizing: border-box
+  outline-color: var(--colorAccentDark)
 
 html, body
   height: 100%
@@ -117,6 +117,9 @@ h6, .h6
 
 .hidden
   display: none !important
+
+.centered
+  text-align: center
 
 
 // ==========================================
