--- a/src/routes/dashboard/dashboard.sass
+++ b/src/routes/dashboard/dashboard.sass
@@ -4,11 +4,18 @@
   display: flex
   flex-direction: column
   position: relative
+  --sizeDashPadding: 10vh
 
   article
-    flex: 1 // to account for tab bar
+    flex: 1
+    padding-top: var(--sizeDashPadding)
     overflow-y: auto
     max-width: 800px
+
+    h2
+      text-align: center
+      margin-bottom: 1.6rem
+      color: var(--colorAccentDark)
 
   @media screen and (min-width: 480px)
     flex-direction: row-reverse
