--- a/src/routes/dashboard/tabs/home/home.sass
+++ b/src/routes/dashboard/tabs/home/home.sass
@@ -1,12 +1,6 @@
-.home
-  padding-top: 15vh
-  border: 1px dashed blue
+.home 
+  position: relative
 
-  h2
-    text-align: center
-    margin-bottom: 1.6rem
-    color: var(--colorAccentDark)
-  
   .greeting
     text-align: center
     margin-bottom: 0
@@ -14,8 +8,17 @@
     font-weight: bold
     line-height: 1.2
     color: var(--colorTextDim)
+  
+  .entry-list-empty
+    position: absolute
+    bottom: 0
+    left: 50%
+    transform: translateX(-50%)
 
-  ul
-    list-style: none
-    margin: 0
-    padding: 0
+    p
+      line-height: 1
+      text-align: center
+      width: 60%
+      margin: 0
+      position: absolute
+      color: var(--colorTextSecondary)
