fixed code formatting consistency

--- a/src/components/auth-form/auth-form.sass
+++ b/src/components/auth-form/auth-form.sass
@@ -1,4 +1,6 @@
-form
+// ==========================================
+// auth form styles
+.auth-form form
   height: 100%
   display: flex
   flex-direction: column
@@ -44,7 +46,7 @@ $sWidth: 50%
 $sCorners: .5em
 $sShadow: 0 1em 3em rgba(#000, 0.2)
 
-.form-content
+.auth-form .form-content
   height: 100%
   width: 100%
   max-width: 1000px
