--- a/src/routes/dashboard/dashboard.sass
+++ b/src/routes/dashboard/dashboard.sass
@@ -1,3 +1,5 @@
+// ==========================================
+// dashboard styles
 .dashboard
   height: 100%
   background: var(--colorBackground)
