entry form completed

--- a/src/components/button/button.sass
+++ b/src/components/button/button.sass
@@ -12,6 +12,7 @@
   padding: .8em
   text-decoration: none
   width: 100%
+  max-width: 480px
   white-space: nowrap
   overflow: hidden
   transition: all .3s ease
@@ -34,7 +35,7 @@
       &:hover
         background: var(--colorTextSecondary)
 
-  &.next, &.prev
+  &.next, &.prev, &.close, &.save
     display: flex
     border-radius: 50%
     width: 3em
