--- a/src/components/entry/entry.sass
+++ b/src/components/entry/entry.sass
@@ -13,12 +13,14 @@
   display: flex
   align-items: center
   justify-content: space-between
+  width: 100%
+  transition: all .3s ease
 
   &::before
     display: none
   
   &:hover
-    background: var(--colorDim)
+    background: var(--colorTextSecondary)
 
   .date
     width: 12%
