--- a/src/components/premium/premium.sass
+++ b/src/components/premium/premium.sass
@@ -10,8 +10,9 @@
   
   svg:not(.premium)
     opacity: 0.75
-    height: 40vh
-    margin: 3em 0
+    width: 100%
+    max-height: 80vw
+    margin: 3em auto
 
   .premium
     height: 1em
