--- a/src/routes/dashboard/tabs/settings/settings.sass
+++ b/src/routes/dashboard/tabs/settings/settings.sass
@@ -1,3 +1,15 @@
 // ==========================================
 // settings tab styles
 .settings
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+
+  p
+    margin-top: 0
+    font-size: 1.2em
+    flex: 1
+
+  .btn
+    font-size: 1em
+    margin-bottom: 1em
