--- a/src/components/auth-form/auth-form.sass
+++ b/src/components/auth-form/auth-form.sass
@@ -1,56 +1,56 @@
 // ==========================================
-// auth form styles
-.auth-form form
-  height: 100%
-  display: flex
-  flex-direction: column
-  justify-content: space-between
-  
-  p
-    font-size: 1.2em
-    line-height: 1.2
-    width: 80%
-
-    &.description
-      margin: 1rem 0 1em
-
-    &.error, &.disclaimer
-      font-size: .9em
-    
-    &.error
-      margin-top: -1em
-      margin-bottom: 2em
-      color: var(--colorTextError)
-
-    &.disclaimer
-      font-size: .9em
-      color: var(--colorTextDim)
-      width: 80%
-      min-width: 16rem
-      margin: 0 auto 2em
-      display: flex
-      align-items: flex-end
-      justify-content: center
-      text-align: center
-      flex: 1
-
-  .fields
-    flex: 1
-
-  .btn
-    font-size: 1.2em
-  
+// auth form styles  
 $sHeight: 50%
 $sMinHeight: 40em
 $sWidth: 50%
 $sCorners: .5em
 $sShadow: 0 1em 3em rgba(#000, 0.2)
 
-.auth-form .form-content
+.auth-form.form-content
   height: 100%
   width: 100%
   max-width: 1000px
   margin: 0 auto
+
+  form
+    height: 100%
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    
+    p
+      font-size: 1.2em
+      line-height: 1.2
+      width: 80%
+
+      &.description
+        margin: 1rem 0 1em
+
+      &.error, &.disclaimer
+        font-size: .9em
+      
+      &.error
+        margin-top: -1em
+        margin-bottom: 2em
+        color: var(--colorTextError)
+
+      &.disclaimer
+        font-size: .9em
+        color: var(--colorTextDim)
+        width: 80%
+        min-width: 16rem
+        margin: 0 auto 2em
+        display: flex
+        align-items: flex-end
+        justify-content: center
+        text-align: center
+        flex: 1
+
+    .fields
+      flex: 1
+
+    .btn
+      font-size: 1.2em
 
   @media screen and (min-width: 480px)
     display: flex
