--- a/src/routes/dashboard/dashboard.sass
+++ b/src/routes/dashboard/dashboard.sass
@@ -8,7 +8,7 @@
   position: relative
   --sizeDashPadding: 10vh
 
-  article
+  article, form
     flex: 1
     padding-top: var(--sizeDashPadding)
     overflow-y: auto
@@ -22,3 +22,7 @@
   @media screen and (min-width: 480px)
     flex-direction: row-reverse
     width: 100%
+
+    article, form
+      max-width: initial
+      background: var(--colorDim)
