--- a/src/routes/dashboard/tabs/home/home.sass
+++ b/src/routes/dashboard/tabs/home/home.sass
@@ -21,6 +21,6 @@
       line-height: 1
       text-align: center
       width: 60%
-      margin: 0
+      margin: 0 auto
       position: absolute
       color: var(--colorTextSecondary)
