--- a/src/components/entry/entry.sass
+++ b/src/components/entry/entry.sass
@@ -20,7 +20,7 @@
     display: none
   
   &:hover
-    background: var(--colorTextSecondary)
+    background: var(--colorDim)
 
   .date
     width: 12%
