--- a/src/components/tab-bar/tab-bar.sass
+++ b/src/components/tab-bar/tab-bar.sass
@@ -35,8 +35,7 @@
         opacity: 1
   
   @media screen and (min-width: 480px)
-    background: var(--colorTextSecondary)
-    color: var(--color)
+    background: var(--colorPale)
     flex-direction: column
     flex: 1
     max-width: 25em
@@ -48,12 +47,11 @@
       flex: initial
       padding: 1.5em
       width: 100%
-      color: inherit
       justify-content: flex-start
       font-weight: bold
 
       &:hover
-        background: var(--colorAccent)
+        background: var(--colorDim)
 
       &.active
         background: var(--colorAccentDark)
