--- a/src/routes/landing-page/landing-page.sass
+++ b/src/routes/landing-page/landing-page.sass
@@ -28,6 +28,11 @@
     
     h3
       margin-bottom: 1em
+
+    ul
+      list-style: none
+      margin: 0
+      padding: 0
     
     ul li
       margin-bottom: 0.5em
