--- a/src/components/premium/premium.sass
+++ b/src/components/premium/premium.sass
@@ -8,13 +8,13 @@
   .btn
     font-size: 1em
   
-  svg:not(.premium)
+  svg:not(.crown)
     opacity: 0.75
     width: 100%
-    max-height: 80vw
+    max-height: 40vh
     margin: 3em auto
 
-  .premium
+  .crown
     height: 1em
     width: 1em
     fill: var(--colorAccentDark)
