--- a/src/routes/dashboard/tabs/home/home.sass
+++ b/src/routes/dashboard/tabs/home/home.sass
@@ -13,7 +13,7 @@
   
   .entry-list-empty
     position: absolute
-    bottom: 0
+    bottom: -1em
     left: 50%
     transform: translateX(-50%)
 
