added mood entry to EntryForm

--- a/src/components/entry/entry.sass
+++ b/src/components/entry/entry.sass
@@ -38,11 +38,17 @@
 
 
   .preview
-    width: 100%
+    flex: 1
     line-height: 1.2
     max-height: (1.2 * 2em) // 2 lines
     overflow: hidden
     position: relative
+  
+  svg
+    height: 1em
+    width: 1em
+    margin: 0 0.5em
+    opacity: 0.5
 
   &.today
     width: 100%
