--- a/src/routes/dashboard/tabs/home/home.sass
+++ b/src/routes/dashboard/tabs/home/home.sass
@@ -5,7 +5,8 @@
 
   .greeting
     text-align: center
-    margin-bottom: 0
+    margin: 0
+    margin-bottom: 2em
     font-size: 1.2em
     font-weight: bold
     line-height: 1.2
