added tests for each component

--- a/src/components/tab-bar/tab-bar.sass
+++ b/src/components/tab-bar/tab-bar.sass
@@ -47,6 +47,7 @@
     flex-direction: column
     flex: 1
     max-width: 25em
+    overflow-y: auto
     box-shadow: none
     padding-top: var(--sizeDashPadding)
 
