--- a/src/routes/dashboard/dashboard.sass
+++ b/src/routes/dashboard/dashboard.sass
@@ -32,4 +32,14 @@
   @media screen and (min-width: 640px)
     flex-direction: row-reverse
     width: 100%
-    --sizeDashPadding: 6vh
+
+    ::-webkit-scrollbar
+      width: .5em
+      display: none // testing hiding the scrollbar for now
+    
+    ::-webkit-scrollbar-track
+      background: var(--colorPale)
+
+    ::-webkit-scrollbar-thumb 
+      background-color: var(--colorDim)
+      border-radius: .5em
