completed search functionality

--- a/src/components/button/button.sass
+++ b/src/components/button/button.sass
@@ -46,7 +46,7 @@
       &:hover
         background: var(--colorAccent)
 
-  &.next, &.prev, &.close, &.save
+  &.next, &.prev, &.close, &.save, &.search
     display: flex
     border-radius: 50%
     width: 3em
