--- a/src/routes/dashboard/tabs/home/home.sass
+++ b/src/routes/dashboard/tabs/home/home.sass
@@ -14,14 +14,14 @@
   
   .entry-list-empty
     position: absolute
-    bottom: -1em
+    bottom: 0
     left: 50%
     transform: translateX(-50%)
+    flex-direction: column-reverse
 
     p
+      position: relative
+      top: 2em
       line-height: 1
       text-align: center
       width: 60%
-      margin: 0 auto
-      position: absolute
-      color: var(--colorTextSecondary)
