--- a/src/components/entry-list/entry-list.sass
+++ b/src/components/entry-list/entry-list.sass
@@ -10,11 +10,12 @@
   display: flex
   flex-direction: column
   align-items: center
+  justify-content: flex-end
   overflow-x: hidden
+  pointer-events: none
 
   svg
-    width: 100%
-    max-height: 40vh
+    height: 40vh
     opacity: 0.7
   
   p
