--- a/src/routes/dashboard/dashboard.sass
+++ b/src/routes/dashboard/dashboard.sass
@@ -7,7 +7,7 @@
   flex-direction: column
   justify-content: flex-end
   position: relative
-  --sizeDashPadding: 5vh
+  --sizeDashPadding: 6vh
 
   &.loading
     article, form
@@ -28,3 +28,14 @@
   @media screen and (min-width: 480px)
     flex-direction: row-reverse
     width: 100%
+
+    ::-webkit-scrollbar
+      width: .5em
+      display: none // testing hiding the scrollbar for now
+    
+    ::-webkit-scrollbar-track
+      background: var(--colorPale)
+
+    ::-webkit-scrollbar-thumb 
+      background-color: var(--colorDim)
+      border-radius: .5em
