grouped search results by month

--- a/src/routes/dashboard/tabs/search/search.sass
+++ b/src/routes/dashboard/tabs/search/search.sass
@@ -19,6 +19,9 @@
       margin-top: 0.2em
       background: none
       font-size: 1.3rem
+  
+  h3
+    color: var(--colorTextDim)
 
   .results
     margin: 0
