--- a/src/components/app/app.sass
+++ b/src/components/app/app.sass
@@ -108,7 +108,6 @@ h6, .h6
     background: var(--colorPale)
 
 
-
 @media screen and (min-width: 640px)
   ::-webkit-scrollbar
     width: .75em
@@ -126,6 +125,21 @@ h6, .h6
 
   ::selection
     background: var(--colorAccent)
+
+
+@media screen and (min-width: 640px)
+  ::-webkit-scrollbar
+    width: .75em
+
+  ::-webkit-scrollbar-track
+    background: var(--colorPale)
+
+  ::-webkit-scrollbar-thumb 
+    background: var(--colorAccent)
+    border-radius: .5em
+
+::selection
+  background: var(--colorAccent)
 
 
 // ==========================================
