grouped search results by month

--- a/src/components/tab-bar/tab-bar.sass
+++ b/src/components/tab-bar/tab-bar.sass
@@ -42,10 +42,11 @@
       svg
         opacity: 1
   
-  @media screen and (min-width: 480px)
+  @media screen and (min-width: 640px)
     background: var(--colorPale)
     flex-direction: column
-    flex: 1
+    width: 20%
+    min-width: 13em
     max-width: 25em
     overflow-y: auto
     box-shadow: none
