--- a/src/components/app/app.sass
+++ b/src/components/app/app.sass
@@ -37,7 +37,7 @@ html
   --sizePadding: 3rem
   --sizeMaxWidth: 1000px
 
-  // Tablet: 480px
+  // Tablet: 640px
   // Laptop: 960px
   // Wide: 1200px
   // UltraWide: 1600px
@@ -97,19 +97,35 @@ h6, .h6
   position: relative
   overflow-y: scroll
 
-  @media screen and (min-width: 480px)
+  @media screen and (min-width: 640px)
     padding-top: 0
-    background-color: var(--colorPale)
+    background: var(--colorPale)
+
+::-webkit-scrollbar
+  width: .75em
+
+::-webkit-scrollbar-track
+  background: var(--colorPale)
+
+::-webkit-scrollbar-thumb 
+  background: var(--colorAccent)
+  border-radius: .5em
+
+  &:hover, &:active
+    background: var(--colorAccentDark)
+
+::selection
+  background: var(--colorAccent)
 
 
 // ==========================================
 // media query targets & helpers
 .media-phone
-  @media screen and (min-width: 480px)
+  @media screen and (min-width: 640px)
     display: none !important
 
 .media-tablet
-  @media screen and (max-width: 480px)
+  @media screen and (max-width: 640px)
     display: none !important
 
 .media-laptop
