--- a/src/components/button/button.sass
+++ b/src/components/button/button.sass
@@ -12,7 +12,7 @@
   padding: .8em
   text-decoration: none
   width: 100%
-  max-width: 480px
+  max-width: 18em
   white-space: nowrap
   overflow: hidden
   transition: all .3s ease
