--- a/src/components/popup/popup.sass
+++ b/src/components/popup/popup.sass
@@ -37,13 +37,14 @@
     transform: translate(-50%, 1em)
     pointer-events: all
 
-  @media screen and (min-width: 480px)
+  @media screen and (min-width: 640px)
     top: initial !important
     left: initial
     bottom: 1em
     right: -25%
     transform: none
     width: 25%
+    max-width: 25em
     align-items: center
     font-size: 1em
 
