--- a/src/components/premium/premium.sass
+++ b/src/components/premium/premium.sass
@@ -1,6 +1,10 @@
 // ==========================================
 // premium item styles
 .premium
+  display: flex
+  flex-direction: column
+  align-items: center
+
   p
     font-size: 1.2em
     margin: 0
@@ -10,9 +14,8 @@
   
   svg:not(.crown)
     opacity: 0.75
-    width: 100%
-    max-height: 40vh
-    margin: 3em auto
+    height: 35vh
+    margin: 4em auto
 
   .crown
     height: 1em
