--- a/src/routes/dashboard/tabs/settings/settings.sass
+++ b/src/routes/dashboard/tabs/settings/settings.sass
@@ -3,13 +3,37 @@
 .settings
   display: flex
   flex-direction: column
-  justify-content: space-between
 
   p
     margin-top: 0
-    margin-bottom: 0
+    margin-bottom: 2em
     font-size: 1.2em
+  
+  hr
+    width: 40%
+    border-top: 1px solid var(--colorDim)
+    margin: 2em auto 3em
+  
+  ul
     flex: 1
+    font-size: .8em
+    list-style: none
+    margin: .5em auto 0
+    padding: 0
+
+    li
+      width: 100%
+      max-width: 500px
+      margin: 0
+      text-align: center
+      padding: 0.75em 0
+      border-bottom: 1px solid var(--colorPale)
+
+  a
+    color: var(--colorTextDim)
+
+    &::before
+      display: none
 
   .btn
     font-size: 1em
