added navigation feature

--- a/src/components/entry-list/entry-list.sass
+++ b/src/components/entry-list/entry-list.sass
@@ -5,6 +5,14 @@
   margin: 0
   padding: 0
 
+.entry-list-title
+  background: var(--colorBackground)
+  position: sticky
+  top: calc(-1 * var(--sizeDashPadding))
+  z-index: 5
+  padding: 2em 0 1em
+  margin-bottom: -1em
+
 .entry-list-empty
   width: 100%
   display: flex
