--- a/src/components/app/app.sass
+++ b/src/components/app/app.sass
@@ -101,21 +101,24 @@ h6, .h6
     padding-top: 0
     background: var(--colorPale)
 
-::-webkit-scrollbar
-  width: .75em
 
-::-webkit-scrollbar-track
-  background: var(--colorPale)
 
-::-webkit-scrollbar-thumb 
-  background: var(--colorAccent)
-  border-radius: .5em
+@media screen and (min-width: 640px)
+  ::-webkit-scrollbar
+    width: .75em
 
-  &:hover, &:active
-    background: var(--colorAccentDark)
+  ::-webkit-scrollbar-track
+    background: var(--colorPale)
 
-::selection
-  background: var(--colorAccent)
+  ::-webkit-scrollbar-thumb 
+    background: var(--colorAccent)
+    border-radius: .5em
+
+    &:hover, &:active
+      background: var(--colorAccentDark)
+
+  ::selection
+    background: var(--colorAccent)
 
 
 // ==========================================
