--- a/src/routes/dashboard/tabs/entries/entries.sass
+++ b/src/routes/dashboard/tabs/entries/entries.sass
@@ -9,6 +9,17 @@
 
     h2
       margin: 0
+
+      select
+        background: none
+        padding: 0
+        border: none
+        font-family: inherit
+        font-size: inherit
+        font-weight: inherit
+        color: inherit
+        cursor: pointer
+        outline: none
     
     .btn
       font-size: 1rem
