--- a/src/routes/dashboard/tabs/settings/settings.sass
+++ b/src/routes/dashboard/tabs/settings/settings.sass
@@ -16,7 +16,6 @@
   
   ul
     flex: 1
-    font-size: .8em
     list-style: none
     margin: .5em auto 0
     padding: 0
@@ -28,6 +27,9 @@
       text-align: center
       padding: 0.75em 0
       border-bottom: 1px solid var(--colorPale)
+
+      &:last-of-type
+        border-bottom: none
 
   a
     color: var(--colorTextDim)
