--- a/src/components/button/button.sass
+++ b/src/components/button/button.sass
@@ -7,8 +7,8 @@
   border: none
   border-radius: 2em
   cursor: pointer
-  background: var(--colorText)
-  color: var(--colorBackground)
+  background: var(--colorBackgroundAlt)
+  color: var(--colorTextAlt)
   padding: .8em
   text-decoration: none
   width: 100%
@@ -36,8 +36,8 @@
         background: var(--colorTextSecondary)
   
   &.accent
-    background: var(--colorAccentDark)
-    color: var(--colorBackground)
+    background: var(--colorAccent)
+    color: var(--colorTextAlt)
 
     &:disabled
       background: var(--colorTextSecondary)
