--- a/src/components/entry-list/entry-list.sass
+++ b/src/components/entry-list/entry-list.sass
@@ -10,6 +10,7 @@
   align-items: center
   justify-content: space-between
   background: var(--colorBackground)
+  color: var(--colorText)
   position: sticky
   top: calc(-1 * var(--sizeDashPadding))
   z-index: 5
