--- a/src/components/entry/entry.sass
+++ b/src/components/entry/entry.sass
@@ -2,6 +2,7 @@
 // entry styles
 .entry
   background: var(--colorPale)
+  color: var(--colorText)
   border-radius: .5em
   border: none
   text-align: left
@@ -49,6 +50,7 @@
     width: 1em
     margin: 0 0.5em
     opacity: 0.5
+    fill: currentColor
 
   &.today
     width: 100%
