--- a/src/components/loader/loader.sass
+++ b/src/components/loader/loader.sass
@@ -20,8 +20,8 @@
     width: 10vmax
     border-width: .5em
     border-style: solid
-    border-top-color: var(--colorAccentDark)
-    border-left-color: var(--colorAccentDark)
+    border-top-color: var(--colorAccent)
+    border-left-color: var(--colorAccent)
     border-right-color: transparent
     border-bottom-color: transparent
     border-radius: 50%
