--- a/src/components/mood-selector/mood-selector.sass
+++ b/src/components/mood-selector/mood-selector.sass
@@ -43,7 +43,7 @@
             border: 1px solid var(--colorAccent)
       
         &:checked + label svg
-          fill: var(--colorAccentDark)
+          fill: var(--colorAccent)
   
   &.disabled
     svg
