--- a/src/components/popup/popup.sass
+++ b/src/components/popup/popup.sass
@@ -5,8 +5,8 @@
   top: 0
   left: 50%
   transform: translate(-50%, -100%)
-  background: var(--colorText)
-  color: var(--colorBackground)
+  background: var(--colorBackgroundAlt)
+  color: var(--colorTextAlt)
   padding: 0 1em
   max-width: 80%
   border-radius: .3em
@@ -21,7 +21,7 @@
   transition: all .5s ease
 
   &.error
-    color: var(--colorTextError)
+    color: var(--colorError)
   
   p
     flex: 1
