--- a/src/routes/dashboard/tabs/entry-form/entry-form.sass
+++ b/src/routes/dashboard/tabs/entry-form/entry-form.sass
@@ -7,6 +7,7 @@
   z-index: 5
   overflow-y: auto
   background: var(--colorBackground)
+  color: var(--colorText)
   border-bottom: 1px solid var(--colorPale)
   
   @media screen and (min-width: 640px)
@@ -52,4 +53,5 @@
     border: none
     outline: none
     background: none
+    color: var(--colorText)
     line-height: inherit
