--- a/src/routes/dashboard/tabs/moods/moods.sass
+++ b/src/routes/dashboard/tabs/moods/moods.sass
@@ -3,6 +3,7 @@
 .moods
   display: flex
   flex-direction: column
+  color: var(--colorText)
 
   .views
     display: flex
@@ -39,8 +40,8 @@
           background: var(--colorDim)
 
     input:checked + label
-      background: var(--colorAccentDark)
-      color: var(--colorBackground)
+      background: var(--colorAccent)
+      color: var(--colorTextAlt)
   
   .charts
     flex: 1
