--- a/src/components/auth-form/auth-form.sass
+++ b/src/components/auth-form/auth-form.sass
@@ -32,7 +32,7 @@ $sShadow: 0 1em 3em rgba(#000, 0.2)
       &.error
         margin-top: -1em
         margin-bottom: 2em
-        color: var(--colorTextError)
+        color: var(--colorError)
 
       &.disclaimer
         font-size: .9em
