--- a/src/routes/dashboard/dashboard.sass
+++ b/src/routes/dashboard/dashboard.sass
@@ -3,6 +3,7 @@
 .dashboard
   height: 100%
   background: var(--colorBackground)
+  color: var(--colorText)
   display: flex
   flex-direction: column
   justify-content: flex-end
@@ -26,7 +27,7 @@
     h2
       text-align: center
       margin-bottom: 1.6rem
-      color: var(--colorAccentDark)
+      color: var(--colorAccent)
 
   @media screen and (min-width: 640px)
     flex-direction: row-reverse
