--- a/src/routes/dashboard/tabs/settings/settings.sass
+++ b/src/routes/dashboard/tabs/settings/settings.sass
@@ -4,18 +4,96 @@
   display: flex
   flex-direction: column
 
-  p
-    margin-top: 0
-    margin-bottom: 2em
+  .setting-list
+    margin: 1em auto 2em
+    padding: 0
     font-size: 1.2em
+    width: 100%
+    max-width: 480px
+    list-style: none
+
+    li
+      margin: 0
+      padding: 0
+
+      &.color-picker
+        display: flex
+        align-items: center
+        justify-content: space-between
+      
+      .colors
+        display: flex
+        align-items: center
+        justify-content: space-between
+
+        & > span
+          height: 0.8em
+          width: 0.8em
+          margin-left: 0.8em
+          cursor: pointer
+
+      input
+        height: 0
+        width: 0
+        overflow: hidden
+        opacity: 0
+        position: absolute
+
+      input[type=checkbox]      
+        & + label
+          display: block
+          position: relative
+          cursor: pointer
+          color: var(--colorText)
+
+          &::before, &::after
+            content: ''
+            height: 0.8em
+            width: 0.8em
+            position: absolute
+            top: 50%
+            right: 0
+            transform: translateY(-50%)
+            border-radius: 0.5em
+            transition: all .2s ease      
+          &::before
+            width: 1.6em
+            background: var(--colorDim)
+          &::after
+            right: 0.8em
+            background: var(--colorTextDim)
+        
+        &:checked + label
+          &::after
+            right: 0
+            background: var(--colorAccent)
+      
+      input[type=radio]      
+        & + label
+          span
+            display: block
+            height: 0.8em
+            width: 0.8em
+            border-radius: 50%
+            opacity: 0.5
+            cursor: pointer
+            transition: all .2s ease
+
+            @media (hover: hover)
+              &:hover
+                opacity: 1
+        
+        &:checked + label
+          span
+            border: .1em solid var(--colorText)
+            opacity: 1
   
   hr
     width: 40%
     border-top: 1px solid var(--colorDim)
     margin: 2em auto 3em
   
-  ul
-    flex: 1
+  .credits
     list-style: none
     margin: .5em auto 0
     padding: 0
@@ -26,6 +104,7 @@
       margin: 0
       text-align: center
       padding: 0.75em 0
+      color: var(--colorText)
       border-bottom: 1px solid var(--colorPale)
 
       &:last-of-type
