--- a/src/routes/dashboard/tabs/entries/entries.sass
+++ b/src/routes/dashboard/tabs/entries/entries.sass
@@ -20,6 +20,9 @@
         color: inherit
         cursor: pointer
         outline: none
+      
+      @media screen and (min-width: 640px)
+        background: var(--colorBackground)
     
     .btn
       font-size: 1rem
