--- a/src/routes/dashboard/tabs/home/home.sass
+++ b/src/routes/dashboard/tabs/home/home.sass
@@ -6,11 +6,19 @@
   .greeting
     text-align: center
     margin: 0
-    margin-bottom: 2em
     font-size: 1.2em
     font-weight: bold
     line-height: 1.2
     color: var(--colorTextDim)
+  
+  .streak
+    text-align: center
+    margin-bottom: 1.5em
+    opacity: 0.9
+    
+    span
+      display: inline-block
+      margin-right: 0.5em
   
   .entry-list-empty
     position: absolute
