added Demo credentials to login form

--- a/src/components/auth-form/auth-form.sass
+++ b/src/components/auth-form/auth-form.sass
@@ -51,6 +51,7 @@ $sShadow: 0 1em 3em rgba(#000, 0.2)
 
     .btn
       font-size: 1.2em
+      margin: 0 auto
 
   @media screen and (min-width: 640px)
     display: flex
