added serviceWorker and manifest

--- a/src/components/app/app.sass
+++ b/src/components/app/app.sass
@@ -33,7 +33,7 @@ html
   --colorTextAlt: #FFFFFF
   --colorPale: #F5F5F5
   --colorDim: #E9E9E9
-  --colorTextDim: #8D8D8D
+  --colorTextDim: #4E4E4E
   --colorTextSecondary: #BCBCBC
 
   // this is changed separately
