--- a/src/components/auth-form/auth-form.sass
+++ b/src/components/auth-form/auth-form.sass
@@ -36,7 +36,7 @@ $sShadow: 0 1em 3em rgba(#000, 0.2)
 
       &.disclaimer
         font-size: .9em
-        color: var(--colorTextDim)
+        color: var(--colorText)
         width: 80%
         min-width: 16rem
         margin: 0 auto 2em
