--- a/src/components/input/input.sass
+++ b/src/components/input/input.sass
@@ -21,14 +21,14 @@
     color: var(--colorText)
     border-radius: 0
     padding: .6em 0
-    border-bottom: 1px solid var(--colorTextSecondary)
+    border-bottom: 1px solid var(--colorTextDim)
     transition: all .2s ease
 
     & + label
       position: absolute
       left: 0
       top: .6em
-      color: var(--colorTextSecondary)
+      color: var(--colorTextDim)
       pointer-events: none
       transition: all .2s ease
 
