--- a/src/components/tab-bar/tab-bar.sass
+++ b/src/components/tab-bar/tab-bar.sass
@@ -9,6 +9,7 @@
   z-index: 4
   margin: 0
   padding: 0
+  padding-bottom: env(safe-area-inset-bottom)
   list-style: none
   transition: all .2s ease
 
