--- a/src/components/app/app.sass
+++ b/src/components/app/app.sass
@@ -108,7 +108,7 @@ h6, .h6
     background: var(--colorPale)
 
 
-@media screen and (min-width: 640px)
+@media (hover: hover)
   ::-webkit-scrollbar
     width: .75em
 
